--- a/OVA.EasyLive/App.config
+++ b/OVA.EasyLive/App.config
@@ -5,6 +5,6 @@
     </startup>
 
 <appSettings>
-  <add key="ConectionString" value="path"/>
+  <add key="ConectionString" value="C:\Users\ОрловВ\source\repos\OVA.EasyLive\AppDataBase\MyData.db"/>
 </appSettings>
 </configuration>
