--- a/OVA.EasyLive.UploadUser/App.config
+++ b/OVA.EasyLive.UploadUser/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  
+  <appSettings>
+    <add key="dbPathString" value="C:\Users\Vladimir\source\repos\OVA.EasyLive\AppDataBase\"/>
+  </appSettings>
+  
 </configuration>
