--- a/OVA.EasyLive.DAL/OVA.EasyLive.DAL.csproj
+++ b/OVA.EasyLive.DAL/OVA.EasyLive.DAL.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\LiteDB.5.0.3\lib\net45\LiteDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +49,7 @@
     <Compile Include="DataContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="UserSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
