--- a/OVA.EasyLive.DAL/OVA.EasyLive.DAL.csproj
+++ b/OVA.EasyLive.DAL/OVA.EasyLive.DAL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserSettings.cs" />
+    <Compile Include="Vacation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
