--- a/OVA.EasyLive/App.config
+++ b/OVA.EasyLive/App.config
@@ -5,7 +5,7 @@
     </startup>
 
 <appSettings>
-  <add key="ConnectionString" value="C:\Users\ОрловВ\source\repos\OVA.EasyLive\AppDataBase\MyData.db"/>
+  <add key="ConnectionString" value="C:\Users\Vladimir\source\repos\OVA.EasyLive\AppDataBase\MyData.db"/>
 </appSettings>
   
 </configuration>
