--- a/OVA.EasyLive.DAL/packages.config
+++ b/OVA.EasyLive.DAL/packages.config
@@ -1,4 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="2.10.1" targetFramework="net461" />
+  <package id="EPPlus" version="5.0.4" targetFramework="net461" />
   <package id="LiteDB" version="5.0.3" targetFramework="net461" />
+  <package id="Microsoft.WindowsAPICodePack.Core" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.WindowsAPICodePack.Shell" version="1.1.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net461" />
 </packages>
