--- a/OVA.EasyLive.UploadUser/packages.config
+++ b/OVA.EasyLive.UploadUser/packages.config
@@ -3,6 +3,7 @@
   <package id="DocumentFormat.OpenXml" version="2.10.1" targetFramework="net461" />
   <package id="EPPlus" version="5.0.4" targetFramework="net461" />
   <package id="LiteDB" version="5.0.3" targetFramework="net461" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net461" />
   <package id="Microsoft.WindowsAPICodePack.Core" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.WindowsAPICodePack.Shell" version="1.1.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
